# evercore

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_next.md  pyproject.toml
src/evercore/: __init__.py  agent_runtime.py  api.py  db.py  execution.py  models.py  repositories.py  schemas.py  settings.py  task_control.py  task_runtime.py  test_runner.py  worker.py
src/evercore/executors/: registry.py
src/evercore/services/: __init__.py  scheduler_service.py  state_policy.py  ticket_service.py  worker_service.py
src/evercore/workflow/: __init__.py  loader.py  types.py  validator.py
src/evergreen_core/: __init__.py  agent_runtime.py  api.py  db.py  models.py  repositories.py  schemas.py  settings.py  time_utils.py  worker.py  workflow_definitions.py
src/evergreen_core/executors/: __init__.py  registry.py
src/evergreen_core/services/: __init__.py  ticket_service.py  worker_service.py
tests/: _test_support.py  test_api.py  test_executors.py  test_repositories.py  test_scheduler_service.py  test_standalone_engine.py  test_state_policy.py  test_ticket_service.py  test_time_utils.py  test_worker_service.py  test_workflow.py
workflows/: default_ticket.yaml
